--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,10 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  /* animation: App-logo-spin infinite 20s linear; */
   height: 80px;
   display: block;
 }
-
-.App-header {
-  background-color: #222;
-  height: 130px;
-  padding: 20px;
-  color: white;
-}
-
 
 .App-title {
   font-size: 1em;
