--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -1,5 +1,6 @@
 .Product {
 	background: white;
+	padding: 0 20px;
 }
 
 .Product > h2,
@@ -8,6 +9,7 @@
 	padding:20px 0;
 	width:calc(100% - 220px);
 	margin:0;
+	padding-top: 0;
 }
 .Product figure {
 	display: inline-block;
