--- a/src/index.css
+++ b/src/index.css
@@ -3,26 +3,18 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+main {
+  display: inline-block;
+  width:80%;
+  vertical-align: top;
+}
+
 nav a {
   text-decoration: none;
   color:white;
 }
 
-header span nav:nth-of-type(1) {
-  text-align: right;
-  padding: 0 0 20px 0;
-}
-
-nav:nth-of-type(1) a {
-  padding:5px;
-}
-
-header input {
-  padding: 20px;
-  display: inline-block;
-  width: 75%;
-  margin: 0px auto;
-}
 
 main > section > section {
   display: block;
@@ -30,6 +22,8 @@ main > section > section {
 main img {
   width:auto;
   max-width: 100%;
+  margin:auto;
+  display: block;
 }
 main > section > section > section:nth-of-type(1) {
   display:inline-block;
@@ -44,55 +38,5 @@ section > section > section ~ section {
 main > section > section > section figure:nth-of-type(2) img {
   max-width: calc(33% - 6px);
   padding: 3px;
-}
-.App > nav:nth-of-type(1) {
-  margin:0 auto;
-  display: block;
-
-}
-
-.App > nav:nth-of-type(1) span {
   display: inline-block;
-  width: 20%;
-}
-
-
-.App > nav:nth-of-type(1) a {
-  padding:20px 0;
-  background: grey;
-  display: inline-block;
-  /* margin-left: -4px; */
-  width:100%;
-  text-align: center;
-  text-transform: capitalize;
-}
-.App > nav:nth-of-type(1) a:hover {
-  background: #333;
-}
-
-
-.App > nav:nth-of-type(1) a.active {
-  background: #3f51b5;
-}
-nav span nav {
-  display:  none;
-  position:  absolute;
-  width: 20%;
-}
-.App > nav:nth-of-type(1) a:hover + nav,
-.App > nav:nth-of-type(1) a:focus + nav,
-nav span nav:focus,
-nav span nav:hover {
-  display: block;
-  animation: fadeIn 0.5s 1;
-
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
