--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -3,7 +3,7 @@ header {
   height: 130px;
   padding: 20px;
   color: white;
-  background: linear-gradient(#333, #ccc);
+  background: linear-gradient(#232323, #222222);
 }
 
 header > span:first-child {
