--- a/src/css/Item.css
+++ b/src/css/Item.css
@@ -1,7 +1,32 @@
 .Item {
-	padding:0 20px
+  padding: 0 20px;
+  color: #e8eaf6;
 }
 
 .Item h2 {
-	margin-top:0;
+  margin-top: 0;
+  position: absolute;
+  left: -1000%;
+}
+
+.Item figcaption {
+  font-size: 90%;
+}
+
+.Item > section > section figure:nth-of-type(2) img {
+  max-width: calc(25% - 2px);
+  padding: 1px;
+  display: inline-block;
+}
+
+.Item > section > section:nth-of-type(1) {
+  display: inline-block;
+	width: 40%;
+  min-width: 260px;
+}
+
+.Item > section > section:nth-of-type(2) {
+  display: inline-block;
+	width: 60%;
+	min-width: 275px;
 }
