--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,17 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: fixed top linear-gradient(-45deg, #222, #232323);
 }
 
 main {
   display: inline-block;
   width:80%;
   vertical-align: top;
+  min-width: 320px;
 }
 
-nav a {
+a {
   text-decoration: none;
   color:white;
 }
